Revert "Fixed overflow"
This reverts commit c726ccf12d466c16c915a1a6d87a5a0c5e732406.

--- a/src/pages/gameboardPage/gameboardPage.scss
+++ b/src/pages/gameboardPage/gameboardPage.scss
@@ -60,15 +60,13 @@
 
             .Gameboard_TracklistComponentContainer {
                 width: 50px;
-                display: flex;
-                flex-direction: column;
-                gap: 10px;
-                flex-grow: 1;
+                opacity: 0;
+                transition: all 0.2s ease-in-out;
                 height: 100%;
-                flex-basis: 0;
+                margin: 20px 0;
+                align-items: center;
                 overflow-y: auto;
-                overflow-x: hidden;
-                opacity: 100%;
+                padding: 0 5px;
                 &.shown {
                     width: 280px;
                     display: flex;
@@ -138,15 +136,13 @@
 
             .Gameboard_PlayersComponentContainer {
                 width: 50px;
-                display: flex;
-                flex-direction: column;
-                gap: 10px;
-                flex-grow: 1;
+                opacity: 0;
+                transition: all 0.2s ease-in-out;
                 height: 100%;
-                flex-basis: 0;
+                margin: 20px 0;
+                align-items: center;
                 overflow-y: auto;
-                overflow-x: hidden;
-                opacity: 100%;
+                padding: 0 5px;
                 &.shown {
                     width: 280px;
                     display: flex;
